--- a/src/styles.css
+++ b/src/styles.css
@@ -94,3 +94,8 @@ p {
 .genre:nth-of-type(2) {
   justify-content: space-around;
 }
+
+.hydration-data-week_chart {
+  width: 50%;
+  height: 50%;
+}
