--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,21 @@
 /* body section */
+@media screen and (min-width: 55em) {
+
+}
+
+@media screen and (max-width: 35em) {
+  header {
+    flex-direction: column;
+    height: 30%;
+  }
+  main {
+    flex-direction: column;
+  }
+  aside {
+    flex-direction: column;
+    height: 500px;
+  }
+}
 
 body {
   height: 99vh;
@@ -7,6 +24,18 @@ body {
   background: #44BBA4;
   font-family: Sans-serif;
   color: #081D36;
+}
+
+.sleep-doughnut-wrapper {
+  position: relative;
+  height: 15vh;
+  width: 15vw;
+}
+
+.hydration-doughnut-wrapper {
+  position: relative;
+  height: 25vh;
+  width: 25vw;
 }
 
 header {
@@ -33,7 +62,7 @@ main {
   margin-bottom: 10%;
 }
 
-footer {
+aside {
   width: 100%;
   height: 20%;
   display: flex;
@@ -49,28 +78,17 @@ footer {
   background: #E7E5DF;
   border: thin #D3D0CB;
   border-radius: 7px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 .small-widgets {
   display: flex;
   justify-content: space-between;
-  width: 100%;
-  height: 200px;
-}
-.sleep-data-doughnut{
-  width: 48%;
-}
-
-.activity {
-  height: 1000px;
-  width: 40%;
 }
 
 .activity-data-week {
+  position: relative;
   margin-top: 3%;
-  height: 260px;
+  height: 35vh;
+  width: 40vw;
 }
 
 .sleep-data-week {
