--- a/src/styles.css
+++ b/src/styles.css
@@ -15,29 +15,16 @@
     flex-direction: column;
     height: 500px;
   }
+  .activity-data-week {
+    width: 100vw;
+  }
 }
 
 body {
-  height: 99vh;
-  width: 97%;
-  margin-left: 2%;
   background: #44BBA4;
   font-family: Sans-serif;
   color: #081D36;
 }
-
-.sleep-doughnut-wrapper {
-  position: relative;
-  height: 15vh;
-  width: 15vw;
-}
-
-.hydration-doughnut-wrapper {
-  position: relative;
-  height: 25vh;
-  width: 25vw;
-}
-
 header {
   display: flex;
   justify-content: space-between;
@@ -47,7 +34,7 @@ header {
 
 main {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   height: 70%;
   width: 100%;
 }
@@ -58,8 +45,6 @@ main {
   flex-direction: column;
   justify-content: flex-start;
   text-align: center;
-  margin-top: 10%;
-  margin-bottom: 10%;
 }
 
 aside {
@@ -72,9 +57,13 @@ aside {
   background: #081D36;
   color: #D3D0CB;
   border: solid #D3D0CB;
+  margin-top: 1%;
 }
 
 .widget {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background: #E7E5DF;
   border: thin #D3D0CB;
   border-radius: 7px;
@@ -84,25 +73,50 @@ aside {
   justify-content: space-between;
 }
 
+.activity-numbers {
+  height: 28vh;
+  width: 19vw;
+}
 .activity-data-week {
   position: relative;
-  margin-top: 3%;
+  margin-top: 1vh;
   height: 35vh;
   width: 40vw;
 }
 
+.sleep-data-doughnut {
+  width: 16.5vw;
+  height: 30vh;
+}
+
 .sleep-data-week {
-  margin-top: 3%;
-  height: 260px;
+  margin-top: 2vh;
+  position: relative;
+  height: 35vh;
+  width: 35vw;
 }
 
 .hydration-data-week {
-  margin-top: 3%;
-  height: 230px;
+  position: relative;
+  height: 33vh;
+  width: 20vw;
 }
 .hydration-data-today {
-  margin-top: 3%;
-  height: 220px;
+  position: relative;
+  margin-top: 1vh;
+  height: 29vh;
+  width: 20vw;
+}
+.sleep-doughnut-wrapper {
+  position: relative;
+  height: 11vh;
+  width: 15vw;
+}
+
+.hydration-doughnut-wrapper {
+  position: relative;
+  height: 25vh;
+  width: 25vw;
 }
 
 
@@ -116,20 +130,12 @@ p {
 .genre {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-around;
   padding: 1%;
-}
-
-.hydration {
-  width: 28%;
 }
 
 .sleep {
   width: 35%;
-}
-
-.activity-numbers {
-  width: 48%
 }
 
 
@@ -161,4 +167,12 @@ p {
 .steps {
   font-weight: bolder;
   color: #F79D03;
+}
+
+.sleep-doughnut-headline {
+  position: relative;
+  font-style: italic;
+  font-size: 0.8em;
+  left: 10vw;
+  bottom: 0.5vh;
 }
