--- a/src/styles.css
+++ b/src/styles.css
@@ -1,30 +1,11 @@
-/* body section */
-@media screen and (min-width: 55em) {
 
-}
-
-@media screen and (max-width: 35em) {
-  header {
-    flex-direction: column;
-    height: 30%;
-  }
-  main {
-    flex-direction: column;
-  }
-  aside {
-    flex-direction: column;
-    height: 500px;
-  }
-  .activity-data-week {
-    width: 100vw;
-  }
-}
 
 body {
   background: #44BBA4;
-  font-family: Sans-serif;
+  font-family: 'Montserrat';
   color: #081D36;
 }
+
 header {
   display: flex;
   justify-content: space-between;
@@ -39,25 +20,27 @@ main {
   width: 100%;
 }
 
-.info-box {
-  width: 25%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  text-align: center;
-}
-
-aside {
-  width: 100%;
-  height: 20%;
+footer {
+  width: 100vw;
+  height: 15vh;;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  line-height: 1em;
   background: #081D36;
   color: #D3D0CB;
   border: solid #D3D0CB;
   margin-top: 1%;
+}
+
+.info-box {
+  width: 25%;
+  text-align: center;
+}
+
+.genre {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .widget {
@@ -68,6 +51,7 @@ aside {
   border: thin #D3D0CB;
   border-radius: 7px;
 }
+
 .small-widgets {
   display: flex;
   justify-content: space-between;
@@ -77,6 +61,7 @@ aside {
   height: 28vh;
   width: 19vw;
 }
+
 .activity-data-week {
   position: relative;
   margin-top: 1vh;
@@ -121,24 +106,6 @@ aside {
 
 
 
-p {
-  height: 100%;
-  width: 100%;
-  overflow-wrap: break-word;
-}
-
-.genre {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  padding: 1%;
-}
-
-.sleep {
-  width: 35%;
-}
-
-
 .activity-numbers_stats {
   display: flex;
   flex-direction: column;
@@ -154,6 +121,7 @@ p {
   justify-content: space-between;
 }
 
+/* TEXT ELEMENTS*/
 .minutes {
   font-weight: bolder;
   color: #D45E5E;
@@ -173,6 +141,91 @@ p {
   position: relative;
   font-style: italic;
   font-size: 0.8em;
-  left: 10vw;
-  bottom: 0.5vh;
+  left: 28%;
+  bottom: 1%;
+}
+
+/* Responsive Breakpoints */
+@media screen and (min-width: 65em) {
+
+  .widget-heading {
+    font-size: 1.2vw;
+  }
+
+  .widget {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #E7E5DF;
+    border: thin #D3D0CB;
+    border-radius: 7px;
+  }
+
+  header {
+    display: flex;
+    width: 100%;
+    height: 10%;
+  }
+
+  main {
+    display: flex;
+    height: 70%;
+    width: 100%;
+  }
+
+  .activity-numbers {
+    height: 28vh;
+    width: 19vw;
+  }
+
+  .activity-data-week {
+    height: 35vh;
+    width: 40vw;
+  }
+
+  .sleep-data-doughnut {
+    width: 16.5vw;
+    height: 30vh;
+  }
+
+  .sleep-data-week {
+    height: 35vh;
+    width: 35vw;
+  }
+
+  .hydration-data-week {
+    height: 33vh;
+    width: 20vw;
+  }
+  .hydration-data-today {
+    height: 29vh;
+    width: 20vw;
+  }
+  .sleep-doughnut-wrapper {
+    height: 11vh;
+    width: 15vw;
+  }
+
+  .hydration-doughnut-wrapper {
+    height: 25vh;
+    width: 25vw;
+  }
+
+}
+
+@media screen and (max-width: 35em) {
+  header {
+    flex-direction: column;
+    height: 30%;
+  }
+  main {
+    flex-direction: column;
+  }
+  aside {
+    flex-direction: column;
+    height: 500px;
+  }
+  .activity-data-week {
+    width: 100vw;
+  }
 }
