--- a/src/styles.css
+++ b/src/styles.css
@@ -126,16 +126,25 @@ footer {
 .minutes {
   font-weight: bolder;
   color: #D45E5E;
+  text-shadow: 1px 1px 1px #2F0101;
 }
 
 .distance {
   font-weight: bolder;
   color: #C50031;
+  text-shadow: 1px 1px 1px #2F0101;
 }
 
 .steps {
   font-weight: bolder;
   color: #F79D03;
+  text-shadow: 1px 1px 1px #2F0101;
+}
+
+.stairs {
+  font-weight: bolder;
+  color: #EDC610;
+  text-shadow: 1px 1px 1px #2F0101;
 }
 
 .sleep-doughnut-headline {
@@ -153,6 +162,7 @@ footer {
 .site-title {
   font-size: 40px;
   font-style: italic;
+  text-decoration-line: underline;
 }
 
 .user-info_content_title {
