Display daily and average sleep duration

--- a/src/styles.css
+++ b/src/styles.css
@@ -73,6 +73,7 @@ footer {
 .sleep-data-doughnut {
   width: 16.5vw;
   height: 30vh;
+  line-height: 0.5em;
 }
 
 .sleep-data-week {
@@ -144,6 +145,17 @@ footer {
 .stairs {
   font-weight: bolder;
   color: #EDC610;
+  text-shadow: 1px 1px 1px #2F0101;
+}
+
+.sleep-hours {
+  color: #666;
+  font-weight: bold;
+  font-size: 12px;
+}
+
+.sleep-hours-number {
+  color: #AD94CD;
   text-shadow: 1px 1px 1px #2F0101;
 }
 
